# PCMACS

./: .gitmodules  .mxproject  CMakeLists.txt  Makefile  PCMS.ioc  flash.bat
CMSIS/: CMakeLists.txt
Core/Inc/: FreeRTOSConfig.h  exti.h  gpio.h  lv_conf.h  main.h  pwm.h  rtc.h  spi.h  stm32f4xx_it.h  usb.h
Core/Src/: board.c  exti.c  gpio.c  main.c  pwm.c  rcc.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c  usb.c  usb_descriptors.c
LL_Drivers/: CMakeLists.txt
Rtos/: rtos.c  rtos.h
Rtos/Tasks/Backlight_task/: backlight.cpp
Rtos/Tasks/Display_task/: display.c  display.cpp  display.h  display_interface.c  display_interface.cpp  display_interface.h  display_interface.hpp
Rtos/Tasks/Pwr_btn_task/: pwr_btn.cpp  pwr_btn.h
Rtos/Tasks/Usb_cdc_task/: usb_cdc.cpp  usb_cdc.h
ST7789/: CMakeLists.txt  st7789.c  st7789.h
USB_DEVICE/App/: usbd_desc.c
